<resources>
    <!-- App strings -->
    <string name="app_name">DevIntensiveApp</string>

    <!-- User profile strings -->
    <string name="admin_email">upstrocker@gmail.com</string>
    <string name="profile.user_score.rait.dummy">5</string>
    <string name="profile.user_score.rait.hint">Рейтинг</string>
    <string name="profile.user_score.code_lines.dummy">5</string>
    <string name="profile.user_score.code_lines.hint">Строк кода</string>
    <string name="profile.user_score.project.dummy">5</string>
    <string name="profile.user_score.project.hint">Проектов</string>
    <string name="profile.phone.hint">Мобильный</string>
    <string name="profile.phone.dummy">"+7 961 164–07–94"</string>
    <string name="profile.email.hint">E-mail</string>
    <string name="profile.email.dummy">upstrocker@gmail.com</string>
    <string name="profile.vk.hint">Профиль в VK</string>
    <string name="profile.vk.dummy">vk.com/upstrocke</string>
    <string name="profile.git.hint">Репозиторий</string>
    <string name="profile.git.dummy">github.com/upstrocker</string>
    <string name="profile.bio.hint">О себе</string>
    <string name="profile.bio.dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
        officia deserunt mollit anim id est laborum.</string>
    <string name="user_profile.placeholder.image">Изменить фотографию пользователя</string>
    <string name="choose_photo_dialog.title">Выберите источник изображения</string>
    <string name="choose_photo_dialog.gallery">Загрузить из галлереи</string>
    <string name="choose_photo_dialog.camera">Сделать снимок</string>
    <string name="mail_intent_chooser_message">Отправить email с помощью…</string>
    <string name="cancel_input">Отменить ввод</string>

    <!-- AuthActivity strings -->
    <string name="auth.authorization_enter">Войти</string>
    <string name="auth.email">Введите e-mail</string>
    <string name="auth.password">Введите пароль</string>
    <string name="auth.login">Войти</string>
    <string name="auth.remember">Забыли пароль?</string>

    <!-- ImageView description strings -->
    <string name="phone_call_icon_desc">Call</string>
    <string name="phone_call_talk_icon_desc">Call talk</string>
    <string name="email_icon_desc">Email</string>
    <string name="email_send_icon_desc">Email send</string>
    <string name="vk_icon_desc">Vkontakte</string>
    <string name="github_icon_desc">GitHub</string>
    <string name="profile_user_photo_desc">User profile photo</string>
    <string name="add_photo_from_camera_desc">Add Photo From Camera</string>
    <string name="add_photo_from_gallery_desc">Add Photo From Gallery</string>
    <string name="user_profile_image_placeholder_desc">User profile image placeholder</string>

    <!-- Error message strings -->
    <string name="user_profile.invalidate.number">Неверный формат номера телефона</string>
    <string name="user_profile.invalidate.email">Неверный формат email адреса</string>
    <string name="user_profile.invalidate.vk">Неверный формат адреса VK</string>
    <string name="user_profile.invalidate.github">Неверный формат ссылки на GitHub</string>
    <string name="invalid_input">Неверный ввод</string>
    <string name="error_menu_open">Ошибка открытия меню!</string>
    <string name="report_about_error">Сообщить об ошибке</string>
    <string name="can_not_create_file_err">Ошибка! Не получается создать файл!</string>

    <!-- Log strings -->
    <string name="log_callback_oncreate">onCreate</string>
    <string name="log_callback_onstart">onStart</string>
    <string name="log_callback_onresume">onResume</string>
    <string name="log_callback_onpause">onPause</string>
    <string name="log_callback_onstop">onStop</string>
    <string name="log_callback_ondestroy">onDestroy</string>
    <string name="log_callback_onrestart">onRestart</string>

    <!-- Auth form strings -->
    <string name="password_hint">Пароль</string>
    <string name="auth_enter">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>

    <!-- Check permissions strings -->
    <string name="please_get_permissions_msg">Для корректной работы приложения необходимо дать требуемые разрешения</string>
    <string name="permit_msg">Разрешить</string>

    <!-- Font Family -->
    <string name="ff_regular">sans-serif</string>
    <string name="ff_medium">sans-serif-medium</string>

</resources>
