<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Phone item-->
        <LinearLayout
            style="@style/item">

            <ImageView
                style="@style/icon.left"
                android:contentDescription="@string/phone_call_icon_desc"
                android:src="@drawable/ic_call_24dp"/>

            <LinearLayout
                style="@style/item_center">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_et"
                        style="@style/item_center_text"
                        android:hint="@string/profile.phone.hint"
                        android:inputType="phone"
                        android:text="@string/profile.phone.dummy"
                        android:maxLength="25"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/call_img"
                style="@style/icon.right"
                android:contentDescription="@string/phone_call_talk_icon_desc"
                android:src="@drawable/ic_phone_in_talk_24dp"/>
        </LinearLayout>

        <View
            style="@style/separator"/>

        <!--Email item-->
        <LinearLayout
            style="@style/item">

            <ImageView
                style="@style/icon.left"
                android:contentDescription="@string/email_icon_desc"
                android:src="@drawable/ic_email_24dp"/>

            <LinearLayout
                style="@style/item_center">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email_et"
                        style="@style/item_center_text"
                        android:hint="@string/profile.email.hint"
                        android:inputType="textEmailAddress"
                        android:text="@string/profile.email.dummy"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/email_img"
                style="@style/icon.right"
                android:contentDescription="@string/email_send_icon_desc"
                android:src="@drawable/ic_send_24dp"/>
        </LinearLayout>

        <View
            style="@style/separator"/>

        <!--VK item-->
        <LinearLayout
            style="@style/item">

            <ImageView
                style="@style/icon.left"
                android:contentDescription="@string/vk_icon_desc"
                android:src="@drawable/ic_vk_circle_24dp"/>

            <LinearLayout
                style="@style/item_center">

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/vk_et"
                        style="@style/item_center_text"
                        android:hint="@string/profile.vk.hint"
                        android:inputType="text"
                        android:text="@string/profile.vk.dummy"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/vk_img"
                style="@style/icon.right"
                android:contentDescription="@string/vk_icon_desc"
                android:src="@drawable/ic_visibility_24dp"/>
        </LinearLayout>

        <View
            style="@style/separator"/>

        <!--Git item-->
        <LinearLayout
            style="@style/item">

            <ImageView
                style="@style/icon.left"
                android:contentDescription="@string/github_icon_desc"
                android:src="@drawable/ic_github_circle_24dp"/>

            <LinearLayout
                style="@style/item_center">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/git_et"
                        style="@style/item_center_text"
                        android:hint="@string/profile.git.hint"
                        android:inputType="text"
                        android:text="@string/profile.git.dummy"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/git_img"
                style="@style/icon.right"
                android:contentDescription="@string/github_icon_desc"
                android:src="@drawable/ic_visibility_24dp"/>
        </LinearLayout>

        <View
            style="@style/separator"/>

        <!--About item-->
        <LinearLayout
            style="@style/item">

            <ImageView
                style="@style/icon.left"
                android:contentDescription="@string/email_icon_desc"
                android:src="@drawable/ic_account_circle_24dp"/>

            <LinearLayout
                style="@style/item_center"
                android:layout_marginRight="@dimen/spacing_medium_32">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/about_et"
                        style="@style/item_center_text"
                        android:hint="@string/profile.bio.hint"
                        android:text="@string/profile.bio.dummy"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            style="@style/separator"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>